// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle Custom size togglers 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-dmRaPn coxogh rts-toggle__container undefined"
    data-element="toggle"
    height={12.5}
    width={25}
  >
    <input
      className="sc-fLlhyt fcsZQH rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-kgflAQ gJxeVN rts-toggle__background"
      data-element="toggle-background"
      height={12.5}
    />
  </div>
  <div
    className="sc-dmRaPn fLtmDs rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-fLlhyt ucVSK rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-kgflAQ cZPDYK rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
  <div
    className="sc-dmRaPn kmErpq rts-toggle__container undefined"
    data-element="toggle"
    height={37.5}
    width={75}
  >
    <input
      className="sc-fLlhyt kXYtFa rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-kgflAQ kguFip rts-toggle__background"
      data-element="toggle-background"
      height={37.5}
    />
  </div>
  <div
    className="sc-dmRaPn jUlauZ rts-toggle__container undefined"
    data-element="toggle"
    height={50}
    width={100}
  >
    <input
      className="sc-fLlhyt fZNaGV rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-kgflAQ kmPtcL rts-toggle__background"
      data-element="toggle-background"
      height={50}
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle checked 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-dmRaPn fLtmDs rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      checked={true}
      className="sc-fLlhyt ucVSK rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-kgflAQ cZPDYK rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle unchecked 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-dmRaPn fLtmDs rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-fLlhyt ucVSK rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-kgflAQ cZPDYK rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
</div>
`;
